Fix up/down arrow keys in menulists by making sure not to reuse nsEvent structs for multiple event dispatches.  Bug 206917, r=brade, sr=sfraser.